--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+*.mat
 
 # Installer logs
 pip-log.txt
