--- a/pyproject.toml
+++ b/pyproject.toml
@@ -165,6 +165,11 @@ reportMissingImports = true
 reportMissingTypeStubs = false
 reportPrivateImportUsage = false
 reportUndefinedVariable = false
+reportGeneralTypeIssues = false
+reportOptionalSubscript = false
+reportUnboundVariable = false
+reportOptionalMemberAccess = false
+reportOptionalOperand = false
 
 pythonVersion = "3.7"
 pythonPlatform = "Linux"
