Push before creating new branch
Co-authored-by: Dinnger <814089338@qq.com>
Co-authored-by: funnymudpeer <79737641+funnymudpeer@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+post_process/*
+!post_process/*.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -164,7 +166,7 @@ cython_debug/
 
 # Experiments and outputs
 outputs/*
-!outputs/copier.sh
+!outputs/*.sh
 exports/
 renders/
 renders1/
